test/files/errors/emptyTail.jg
_main int ()
{
    lol list_int = [];

    lol.tail(); # Error
}